Don't delete movement summary after tactics action